k8s/http-echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: http-echo-ns
  labels:
    app: http-echo-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: http-echo-app
